--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
 </header>
 <main>
 <div class="okvir">
-<p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2830.3586717145004!2d20.482226115750958!3d44.81425718459503!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475a7a9609031735%3A0xc17ed71f59ac4725!2z0JLQuNGB0L7QutCwINCY0KbQoiDRiNC60L7Qu9Cw!5e0!3m2!1ssr!2srs!4v1678660751955!5m2!1ssr!2srs" width="700" height="550" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
+<p><iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2830.3586717145004!2d20.482226115750958!3d44.81425718459503!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475a7a9609031735%3A0xc17ed71f59ac4725!2z0JLQuNGB0L7QutCwINCY0KbQoiDRiNC60L7Qu9Cw!5e0!3m2!1ssr!2srs!4v1678660751955!5m2!1ssr!2srs" width="700" height="550" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
     <div class="join-community">
         <h2 class="com">Join our Community</h2>
         <form>
