--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8"/>
+    <meta name="author" content="Nikola Menkovic,190/22"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="description" content="Football club FC Barcelona and their statistics"/>
     <meta name="keywords" content="Barcelona,FC Barcelona,FC,Barca,Football,Frenkie De Jong,Lewandovski,Dembele,Ansu Fati,Kounde,Ter Stegen,Raphinha,Inaki Pena,Araujo,Christensen,Marcos Alonso,Jordi Alba,Garcia,Gavi,Pedri,Busquets,Sergi Roberto,Ferran Torres,Xavi"/>
@@ -13,7 +14,7 @@
 <body>
 <header>
     <nav>
-        <a href="#"><img src="assets/img/logo.png" alt="logo" class="logo" ></a>
+        <a href="#" class="logo"><img src="assets/img/logo.png" alt="logo"class="logo"></a>
         <ul class="nav_links">
             <li><a href="index.html">Home</a></li>
             <li><a href="lineup.html">Lineup</a></li>
